// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`snapshot custom 1`] = `
<YozoraInlineMath
  className="custom-class"
  style={
    Object {
      "background": "hsla(210deg, 13%, 12%, 0.05)",
      "border": "1px solid blue",
      "color": "#d81848",
      "margin": "0 2px",
      "padding": "2px",
    }
  }
  value="x^2 + y^2 = z^2"
>
  <span
    className="yozora-inline-math custom-class"
    style={
      Object {
        "background": "hsla(210deg, 13%, 12%, 0.05)",
        "border": "1px solid blue",
        "color": "#d81848",
        "margin": "0 2px",
        "padding": "2px",
      }
    }
  >
    <MathJaxNode
      formula="x^2 + y^2 = z^2"
      inline={true}
    />
  </span>
</YozoraInlineMath>
`;

exports[`snapshot default 1`] = `
<YozoraInlineMath
  style={
    Object {
      "color": "orange",
      "fontSize": "16px",
    }
  }
  value="x^2 + y^2 = z^2"
>
  <span
    className="yozora-inline-math"
    style={
      Object {
        "color": "orange",
        "fontSize": "16px",
      }
    }
  >
    <MathJaxNode
      formula="x^2 + y^2 = z^2"
      inline={true}
    />
  </span>
</YozoraInlineMath>
`;
